<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GPS Caddy</string>
    <string name="clubs_button">Clubs</string>
    <string name="maps_button">Course Map</string>
    <string name="swing_button">Record Swing</string>
    <string name="course_button">Select Course</string>
    <string name="home_button">Home</string>
    <string name="center_button">Center</string>
    <string name="start_point_btn">Set Start \n Point</string>
    <string name="save_to_avg_btn">Save to \n Average</string>
    <string name="start_not_set">Start: not set</string>
    <string name="def_marker_yds">Marker: 0 Yds</string>
</resources>