<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/home_screen">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center"
        >
        <org.holoeverywhere.widget.Button
            android:id="@+id/clubsButton"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/clubs_button"
            android:background="@drawable/blue_button"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <org.holoeverywhere.widget.Button
            android:id="@+id/mapsButton"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/maps_button"
            android:background="@drawable/blue_button"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <org.holoeverywhere.widget.Button
            android:id="@+id/courseButton"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/course_button"
            android:background="@drawable/blue_button"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <org.holoeverywhere.widget.Button
            android:id="@+id/videoButton"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/swing_button"
            android:background="@drawable/blue_button"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
</LinearLayout>
